# blackvuesync

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlint  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Dockerfile  README.md  behave.ini  blackvuesync.py  blackvuesync.sh  blackvuesync_test.py  coverage.sh  crontab  docker-compose.yml  entrypoint.sh  pyproject.toml  run.sh  setuid.sh  sonar-project.properties
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  docker-build.yml  lint.yml  sonarcloud.yml  test.yml
docs/plans/: 2026-02-08-retry-failed-downloads-design.md  2026-02-14-skip-metadata-design.md  2026-02-14-skip-metadata-plan.md  2026-02-24-filter-rework-design.md  2026-02-24-filter-rework.md  2026-02-28-download-resiliency-design.md  2026-02-28-download-resiliency.md  2026-05-02-metrics-export.md
features/: CLAUDE.md  __init__.py  basic_sync.feature  environment.py  sync_basic.feature  sync_filter.feature  sync_retention.feature  sync_retry_failed.feature  sync_skip_metadata.feature
features/lib/: __init__.py  docker.py  recordings.py
features/mock_dashcam/: Dockerfile  __init__.py  entrypoint.py  server.py
features/mock_dashcam/files/: mock.gps  mock.thm
features/steps/: __init__.py  blackvuesync_steps.py  dashcam_recordings_steps.py  downloaded_recordings_steps.py  filter_steps.py  general_steps.py  retention_steps.py  retry_failed_steps.py  skip_metadata_steps.py
plans/: 2026-02-08-retry-failed-integration-tests-design.md  2026-02-08-retry-failed-integration-tests.md  pypi-publication.md
test/: blackvuesync_test.py
test/blackvue_emu/: blackvue_emu.py
test/blackvue_emu/files/: mock.3gf
test/blackvue_emu/templates/: vod.txt
