[project]
name = "blackvuesync"
version = "2.0a"
description = "Synchronize recordings from BlackVue dashcams to a local directory"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["blackvue", "dashcam", "sync", "backup"]

dependencies = []

[project.optional-dependencies]
# development dependencies
dev = [
    "black~=25.11",
    "Flask~=3.1",
    "mypy~=1.14",
    "pre-commit~=4.5",
    "pytest~=9.0",
    "ruff~=0.9",
]

[project.urls]
Homepage = "https://github.com/acolomba/blackvuesync"
Repository = "https://github.com/acolomba/blackvuesync"
Issues = "https://github.com/acolomba/blackvuesync/issues"

[build-system]
requires = ["setuptools>=58.0.4"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black/ruff-format)
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["venv/", "build/", "dist/"]
follow_imports = "skip"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "blackvuesync_test"
disallow_untyped_decorators = false
